traversal.snake.Snake.scala.error
Compilation error:
Snake:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (isFacingWall()) {
  ^Snake:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return ok;
  ^